styles/styles.css
@font-face {
  font-family: "Raleway";
  font-style: normal;
  font-weight: 800;
  src: url("../fonts/raleway/raleway-800.woff2") format("woff2");
  font-display: swap;
}

@font-face {
  font-family: "Rubik";
  font-style: normal;
  font-weight: 400;
  src: url("../fonts/rubik/rubik-400.woff2") format("woff2");
  font-display: swap;
}

@font-face {
  font-family: "Rubik";
  font-style: normal;
  font-weight: 700;
  src: url("../fonts/rubik/rubik-700.woff2") format("woff2");
  font-display: swap;
}

html {
  height: 100%;
}

body {
  display: flex;
  flex-direction: column;
  margin: 0;
  min-height: 100%;
  font-family: "Rubik", "Arial", sans-serif;
  font-size: 18px;
  line-height: 30px;
  color: #000000;
  background-color: #ffffff;
}

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
  clip: rect(0 0 0 0);
  overflow: hidden;
}

.page-container {
  margin: 0 auto;
  flex-grow: 1;
  width: 1160px;
}

.page-container-inner {
  flex-grow: 0;
  padding-left: 60px;
}


/* Шапка */
.page-header {
  margin: 15px auto 4px;
  padding: 4px 60px 0;
}

.page-header-inner {
  position: relative;
  margin-bottom: 73px;
  padding-left: 0;
}

.header-bg {
  position: absolute;
  z-index: -1;
  top: 25px;
  left: -60px;
  min-width: 1160px;
  min-height: 186px;
  background-color: #ffe17f;
}

/* Лого */
.page-logo {
  display: block;
  margin-bottom: 30px;
  max-width: 300px;
  max-height: 36px;
  cursor: pointer;
}

.page-logo:hover {
  opacity: 0.6;
}

.page-logo:active {
  opacity: 0.3;
}

.page-logo:focus img {
  outline-offset: 2px;
  outline: 2px solid #AF4FFF;
}


/* User меню */
.user-menu-wrapper {
  position: relative;
  display: flex;
  margin-bottom: 45px;
}

.header-search-form {
  position: relative;
  display: flex;
}

.search-icon {
  position: absolute;
  top: 12px;
  left: 17px;
}

.header-field {
  box-sizing: border-box;
  max-width: 360px;
  height: 100%;
  padding: 8px 150px 9px 48px;
  font: inherit;
  font-size: 16px;
  line-height: 20px;
  background-color: transparent;
  border: 2px solid #000000;
  border-radius: 50px 0 0 50px;
  outline: none;
}

.header-field-wrapper:focus-within::before {
  position: absolute;
  top: -6px;
  left: -4px;
  width: 363px;
  height: 48px;
  border: 2px solid #AF4FFF;
  content: "";
}

.header-field:disabled,
.header-field:disabled ~ .search-icon {
  opacity: 0.3;
}

.search-button {
  position: relative;
  box-sizing: border-box;
  max-width: 158px;
  margin-right: 26px;
  padding: 8px 56px;
  font: inherit;
  font-size: 16px;
  line-height: 20px;
  border: 2px solid #000000;
  border-left: none;
  border-radius: 0 50px 50px 0;
  background-color: transparent;
  cursor: pointer;
  outline: none;
}

.search-button:hover {
  background-color: #000000;
  color: #ffffff;
}

.search-button:focus::after {
  position: absolute;
  top: -6px;
  left: -6px;
  content: "";
  width: 166px;
  height: 48px;
  border: 2px solid #AF4FFF;
}

.search-button:active {
  color: rgba(255, 255, 255, 0.3);
  background-color: #000000;
}

.search-button:disabled {
  color: inherit;
  background-color: transparent;
  opacity: 0.3;
  cursor: auto;
}

.login-link {
  position: relative;
  box-sizing: border-box;
  display: flex;
  align-items: center;
  width: 231px;
  margin-right: 27px;
  padding-left: 27px;
  text-decoration: none;
  color: #000000;
}

.login-link::before {
  position: absolute;
  top: 15px;
  left: 0;
  content: "";
  width: 13px;
  height: 12px;
  background: url("../images/icons/login-icon.svg") no-repeat;
}

.login-link:hover {
  opacity: 0.6;
}

.login-link:active {
  opacity: 0.3;
}

.login-link:focus {
  outline-offset: 2px;
  outline: 2px solid #AF4FFF;
}

.login-link-inner {
  width: 146px;
}

.unlogin-button {
  display: flex;
  align-items: center;
  width: 57px;
  margin-right: 25px;
  padding: 0;
  font: inherit;
  color: rgba(0, 0, 0, 0.3);
  background-color: transparent;
  border: none;
  cursor: pointer;
  outline: none;
}

.unlogin-button:focus {
  outline-offset: 2px;
  outline: 2px solid #AF4FFF;
}

.compare-button {
  position: relative;
  box-sizing: border-box;
  width: 105px;
  margin-right: 17px;
  padding: 0;
  padding-left: 22px;
  font: inherit;
  background-color: transparent;
  border: none;
  cursor: pointer;
}

.compare-button::before {
  position: absolute;
  top: 15px;
  left: 0;
  content: "";
  width: 10px;
  height: 12px;
  background: url("../images/icons/compare-icon.svg") no-repeat;
}

.compare-button:hover {
  opacity: 0.6;
}

.compare-button:active {
  opacity: 0.3;
}

.compare-button:focus {
  outline-offset: 2px;
  outline: 2px solid #AF4FFF;
}

.cart-button {
  position: relative;
  box-sizing: border-box;
  width: 117px;
  padding: 0;
  padding-left: 43px;
  font: inherit;
  background-color: transparent;
  border: none;
  cursor: pointer;
}

.cart-button::before {
  position: absolute;
  top: 12px;
  left: 15px;
  content: "";
  width: 16px;
  height: 14px;
  background: url("../images/icons/cart-icon.svg") no-repeat;
}

.cart-counter {
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
  top: 11px;
  left: 1px;
  width: 21px;
  height: 21px;
  font-size: 14px;
  line-height: 17px;
  background-color: #ffffff;
  border-radius: 50%;
}

.cart-button:hover {
  opacity: 0.6;
}

.cart-button:active {
  opacity: 0.3;
}

.cart-button:focus {
  outline-offset: 2px;
  outline: 2px solid #AF4FFF;
}

.cart-button:focus + .popover {
  display: block;
}


/* Поповер */
.popover-open {
  display: block;
}

.popover {
  position: absolute;
  top: 40px;
  right: -16px;
  display: none;
  z-index: 3;
  width: 320px;
  min-height: 301px;
  background-color: #000000;
}

.popover::before {
  position: absolute;
  top: -20px;
  left: 145px;
  content: "";
  border: 14px solid transparent;
  border-bottom: 14px solid #000000;
}
/* ... */

